<?xml version="1.0"?>
<package format="2">
    <name>caltech_samaritan</name>
    <version>0.0.1</version>
    <description>Autonomy project for CS 134</description>
    <maintainer email="timbokz@caltech.edu">Timur Kuzhagaliyev</maintainer>

    <license>MIT</license>

    <url type="website">https://github.com/TimboKZ/Samaritan</url>
    <!-- <url type="bugtracker"></url> -->

    <author email="timbokz@caltech.edu">Timur Kuzhagaliyev</author>
    <author email="qingzhuo@caltech.edu">Qingzhuo Aw Young</author>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- ROS package dependencies -->
    <exec_depend>hector_gazebo</exec_depend>
    <exec_depend>moveit</exec_depend>

    <!-- Python dependencies -->
    <exec_depend>rospy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <export>
    </export>

</package>
